bby - fixed spacing

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -388,9 +388,6 @@ iframe {
 		text-decoration: none;
 	}
 
-	table {
-		width: 100px;
-	}
 
 	.wrapper {
 		margin: 0 auto;
@@ -421,9 +418,10 @@ iframe {
 	.content-container {
 		display: grid;
 		margin: 0 auto;
-		width: auto;
+		width: 100%;
 		height: 100%;
 		grid-template-columns: auto;
+		grid-row-gap: 20px;
 
 	}
 
@@ -447,7 +445,7 @@ iframe {
 	}
 
 	.work-img {
-		width: 100%;
+		width: 90vw;
 		height: auto;
 	}
 
@@ -559,8 +557,10 @@ iframe {
 	.content-container {
 		display: grid;
 		margin: 0 auto;
+		grid-template-columns: auto;
 		width: auto;
 		height: 100%;
+		grid-row-gap: 20px;
 	}
 
 	.content-container-block{
@@ -583,7 +583,7 @@ iframe {
 	}
 
 	.work-img {
-		width: 100%;
+		width: 90vw;
 		height: auto;
 	}
 
@@ -775,7 +775,6 @@ iframe {
 		grid-template-columns: auto ;
 
 	}
-
 
 	.work-img {
 		width: 100%;
